# paint-party-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
.cargo/: config.toml
rooms/: "0"  0  1  2
src/: chat_io.rs  delete_dots.rs  get_dots.rs  main.rs  put_dots.rs  remove_dots.rs  ws.rs
src/util/: logger.rs
